[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Crab/moving.png" type="Texture" id=1]
[ext_resource path="res://objects/Crab/Crab.gd" type="Script" id=2]
[ext_resource path="res://assets/Shadow.png" type="Texture" id=3]
[ext_resource path="res://assets/Crab/attacking.png" type="Texture" id=4]
[ext_resource path="res://objects/Crab/AttackArea.gd" type="Script" id=5]
[ext_resource path="res://assets/Audio/slide_medium.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Audio/stick_hit.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/Audio/porcupine_attack.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "attacking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 6.74294

[sub_resource type="CapsuleShape2D" id=11]
radius = 7.80413
height = 7.50681

[sub_resource type="CapsuleShape2D" id=12]
radius = 7.20953
height = 3.34459

[node name="Crab" type="KinematicBody2D" groups=[
"AI",
]]
collision_layer = 16
collision_mask = 63
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 7.13524 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 10 )

[node name="PreAttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackArea" type="Area2D" parent="." groups=[
"AI",
"Attack",
]]
visible = false
position = Vector2( 0.148651, 2.97302 )
collision_layer = 0
collision_mask = 5
script = ExtResource( 5 )

[node name="Shape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 11 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="Shape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="SlideSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -12.0
pitch_scale = 2.0
bus = "SFX"

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
bus = "SFX"

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
pitch_scale = 4.0
autoplay = true
bus = "SFX"
[connection signal="timeout" from="PreAttackTimer" to="." method="_on_PreAttackTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
